feat : 눈내리기 기능 추가

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>아! 타쓰형~ 고생했어</title>
-    <script src="main.js"></script>
+    <!-- <script src="./main.js"></script> -->
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
-<body>
+<body onload="init()">
     <canvas id='snowCanvas'></canvas>
     <header class="flex">
         <img src="media/tree.png" alt="트리사진">
@@ -31,5 +31,7 @@
     <footer class="flex">
         <canvas id="signCanvas" width="300" height="200"></canvas>
     </footer>
+    <script src="./main.js"></script>
+
 </body>
 </html>
